@@ -4,6 +4,7 @@ Phoronix Test Suite (Git)
 
 phodevi: Improved detection for Quill AArch64 board and possibly other boards
 phodevi: Various sensor detection improvements for the Jetson TX2
+phodevi: Add fallback detection for ARM Mali
 report_test_run_times: Add INSTALL_TIMES_ARE_A_BENCHMARK=1 option for generating install time graphs
 report_test_run_times: Add INSTALL_SIZES_ARE_A_BENCHMARK=1 option for generating install size graphs
 
